[package]
name = "android-bootimagelib"
version = "0.1.0"
authors = ["Jeroen Bollen <contact@jeroenbollen.eu>", "Dom Rodriguez <shymega@shymega.org.uk>"]
description = "A tool to handle android boot images. It currently only works for Samsung boot images."
homepage = "https://gitlab.com/shymega/android-bootimagelib"
repository = "https://gitlab.com/shymega/android-bootimagelib"
readme = "README.md"
keywords = ["android", "bootimage"]
license = "Unlicense"

[dependencies]
byteorder = "1.4"
quick-error = "1.2"
humansize = "2.1"
